--- a/tumor-classification2.ipynb
+++ b/tumor-classification2.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-26 20:30:38.135526: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf \n",
     "from tensorflow import keras\n",
@@ -27,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +105,7 @@
        "1        66  LGSC        48871         48195   False"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +360,7 @@
        "{'CC': 1.09, 'EC': 0.87, 'HGSC': 0.48, 'LGSC': 2.29, 'MC': 2.34}"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,16 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# len(labels_list)/(5*pd.Series(labels_list).value_counts())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,19 +418,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LogisticRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "# glm \n",
     "#glm = LogisticRegression(max_iter=500,class_weight='balanced')\n",
-    "Models[\"glm\"] = LogisticRegression(max_iter = 500)\n",
+    "Models[\"glm\"] = LogisticRegression(max_iter = 500,class_weight='balanced')\n",
     "# fit = glm.fit(X_train,y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +460,7 @@
        "0.6504854368932039"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,24 +471,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "val_score 0.65%\n"
+      "val_score 65.0%\n"
      ]
     }
    ],
    "source": [
-    "print(f\"val_score {round(score,2)}%\")"
+    "print(f\"val_score {100*round(score,2)}%\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
