--- a/tumor-classification2.ipynb
+++ b/tumor-classification2.ipynb
@@ -941,6 +941,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "38"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_layers - n_layers*8//10"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 84,
    "metadata": {},
    "outputs": [],
