--- a/tumor-classification2.ipynb
+++ b/tumor-classification2.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-12-05 09:36:18.044971: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf \n",
     "from tensorflow import keras\n",
@@ -28,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +110,7 @@
        "1        66  LGSC        48871         48195   False     66_thumbnail.png"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -338,14 +347,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/23 [==============================] - 60s 3s/step\n"
+      "23/23 [==============================] - 71s 3s/step\n"
      ]
     }
    ],
@@ -357,15 +366,15 @@
     "\n",
     "# extract features \n",
     "batch0= base_model.predict(batch0)\n",
-    "shape = batch0.shape\n",
+    "batch0_shape = batch0.shape\n",
     "\n",
     "# reshape features \n",
-    "features_reshaped_train = np.reshape(batch0,(-1,shape[1]*shape[2]*shape[3]))"
+    "features_reshaped_train = np.reshape(batch0,(-1,batch0_shape[1]*batch0_shape[2]*batch0_shape[3]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +383,7 @@
        "{0: 1.07, 1: 0.9, 2: 0.46, 3: 2.56, 4: 2.47}"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,19 +446,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#imports \n",
+    "#imports scikit-learn models \n",
     "from sklearn import linear_model\n",
     "from sklearn.linear_model import LogisticRegressionCV\n",
-    "from sklearn import tree"
+    "from sklearn import tree\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,11 +468,11 @@
     "# glm\n",
     "Models[\"glm\"] = LogisticRegression(max_iter = 500,\n",
     "                                   class_weight=class_weights,\n",
-    "                                   random_state=2020)\n",
+    "                                   random_state=0)\n",
     "# # # logr reg CV\n",
-    "# Models[\"logRegCV\"] = LogisticRegressionCV(cv = 5,max_iter = 500,\n",
-    "#                                           class_weight=class_weights,\n",
-    "#                                           random_state=2020)\n",
+    "Models[\"logRegCV\"] = LogisticRegressionCV(cv = 5,max_iter = 500,\n",
+    "                                          class_weight=class_weights,\n",
+    "                                          random_state=0)\n",
     "# ridge classifier \n",
     "# Models[\"ridgeClf\"]= linear_model.RidgeClassifier(alpha=.5,max_iter = 500,\n",
     "#                                                  class_weight=class_weights,random_state=2020)\n",
@@ -472,21 +483,28 @@
     "# Decision tree\n",
     "# Models[\"DT\"] = tree.DecisionTreeClassifier(random_state=2020)\n",
     "\n",
-    "# ensemble learner \n",
-    "# Models[\"gbst\"] = HistGradientBoostingClassifier(max_iter=100)\n",
-    "\n"
+    "# Ensemble learning \n",
+    "# Gradient boosting classifier \n",
+    "# Models[\"GBTclf\"] = GradientBoostingClassifier(n_estimators=100, learning_rate=1.0,\n",
+    "#         max_depth=1, random_state=0)\n",
+    "\n",
+    "# random Forest\n",
+    "# Models[\"Rfclf\"]= RandomForestClassifier(n_estimators=10)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "glm\n"
+      "glm\n",
+      "logRegCV\n",
+      "GBTclf\n",
+      "Rfclf\n"
      ]
     }
    ],
@@ -500,15 +518,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     scores\n",
-      "glm    52.8 %\n"
+      "          scores\n",
+      "glm         52.8\n",
+      "logRegCV    50.7 %\n"
      ]
     }
    ],
@@ -525,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +563,7 @@
        "0"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
