--- a/tumor-classification2.ipynb
+++ b/tumor-classification2.ipynb
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 245,
    "metadata": {
     "tags": [
      "Predictions"
@@ -1335,14 +1335,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2/2 [==============================] - 8s 755ms/step\n",
+      "1/1 [==============================] - 6s 6s/step\n",
       "test labels: ['CC', 'HGSC', 'HGSC', 'EC', 'HGSC', 'CC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'CC', 'HGSC', 'CC', 'MC', 'HGSC', 'CC', 'HGSC', 'HGSC', 'LGSC', 'HGSC', 'HGSC', 'HGSC', 'EC', 'EC', 'EC', 'HGSC', 'EC', 'HGSC', 'HGSC', 'HGSC', 'LGSC', 'EC']\n",
-      "pred labels: ['HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'CC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'CC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'CC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'EC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'CC', 'HGSC', 'HGSC', 'HGSC', 'CC', 'CC']\n"
+      "pred labels: ['CC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'CC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'EC', 'HGSC', 'HGSC', 'HGSC', 'EC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC', 'HGSC']\n"
      ]
     }
    ],
    "source": [
-    "predicted_batch = keras_model.predict(test_dataset)\n",
+    "predicted_batch = keras_model.predict(test_dataset.take(1))\n",
     "predicted_id = tf.math.argmax(predicted_batch, axis=-1,)\n",
     "test_labels = [class_names[id] for id in test_label_batch]\n",
     "predicted_labels = [class_names[id] for id in predicted_id]\n",
